<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/cab_company_imageIV"
        android:layout_width="@dimen/list_image_size"
        android:layout_height="@dimen/list_image_size"
        android:layout_marginBottom="@dimen/list_margins"
        android:layout_marginLeft="@dimen/list_margins"
        android:layout_marginStart="@dimen/list_margins"
        android:layout_marginTop="@dimen/list_margins"
        android:contentDescription="@string/cab_company_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_local_taxi_default_24dp"/>

    <TextView
        android:id="@+id/cab_companyTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/list_margins"
        android:layout_marginEnd="@dimen/list_margins"
        android:layout_marginLeft="@dimen/list_margins"
        android:layout_marginRight="@dimen/list_margins"
        android:layout_marginStart="@dimen/list_margins"
        android:layout_marginTop="@dimen/list_margins"
        android:text="@string/default_text"
        android:textSize="@dimen/list_textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/eta"
        app:layout_constraintStart_toEndOf="@+id/cab_company_imageIV"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/eta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/list_margins"
        android:layout_marginEnd="@dimen/list_margins"
        android:layout_marginRight="@dimen/list_margins"
        android:layout_marginTop="@dimen/list_margins"
        android:textSize="@dimen/list_textSize"
        android:text="@string/default_minutes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>